Fix dead zone for elevated quality items on profiles, fix killstreak icon misalignment

--- a/src/css/steamcommunity.com.profiles.css
+++ b/src/css/steamcommunity.com.profiles.css
@@ -11,6 +11,7 @@
 .strange:before {
     content: " ";
     position: absolute;
+    pointer-events: none;
     z-index: 1;
     top: 2px;
     left: 2px;
@@ -33,6 +34,7 @@
 .icons img.ks {
     width: 14px;
     height: 15px;
+    padding-top: 5px;
 }
 
 .lowcraft {
