--- a/src/css/steamcommunity.com.profiles.tradeoffers.css
+++ b/src/css/steamcommunity.com.profiles.tradeoffers.css
@@ -111,6 +111,7 @@
 .icons img.ks {
     width: 14px;
     height: 15px;
+    padding-top: 5px;
 }
 
 .lowcraft {
