--- a/src/css/steamcommunity.com.tradeoffer.css
+++ b/src/css/steamcommunity.com.tradeoffer.css
@@ -108,6 +108,7 @@
 .icons img.ks {
     width: 14px;
     height: 15px;
+    padding-top: 5px;
 }
 
 .lowcraft {
